objects/Sales_Person__c.object
<CustomObject>
    <fields>
        <fullName>ExtIDSalesPerson__c</fullName>
        <externalId>true</externalId>
        <label>ExtIDSalesPerson</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ODP_Employee_Id__c</fullName>
        <formula>User__r.OD_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ODP Employee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Emp_Id__c</fullName>
        <label>OMX Emp Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Override_Rep_ID__c</fullName>
        <externalId>true</externalId>
        <label>OMX Override Rep ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Rep_ID__c</fullName>
        <externalId>true</externalId>
        <label>OMX Rep ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_SAPID__c</fullName>
        <formula>User__r.SAP_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OMX SAPID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Relate_Id__c</fullName>
        <externalId>true</externalId>
        <label>Role Relate Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SPid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmallPhotoUrl__c</fullName>
        <formula>User__r.SmallPhotoURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SmallPhotoUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_MAX_Rep_ID__c</fullName>
        <formula>User__r.OMX_Rep_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User MAX Rep ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Manager__c</fullName>
        <formula>User__r.Manager.FirstName+&apos; &apos;+User__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Market__c</fullName>
        <formula>User__r.Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User__r.FirstName+&apos; &apos;+User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Phone__c</fullName>
        <formula>User__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <formula>User__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Short_Title__c</fullName>
        <formula>User__r.Short_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Short Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <formula>IF(User__r.IsActive, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Person_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Person ID</label>
    <listViews>
        <fullName>RepId_maintenance</fullName>
        <columns>User__c</columns>
        <columns>ODP_Employee_Id__c</columns>
        <columns>NAME</columns>
        <columns>Primary__c</columns>
        <columns>OMX_Override_Rep_ID__c</columns>
        <columns>Role_Relate_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>RepId Maintenance</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test123</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>Primary__c</columns>
        <columns>ODP_Employee_Id__c</columns>
        <columns>OMX_Override_Rep_ID__c</columns>
        <columns>Role_Relate_Id__c</columns>
        <columns>ExtIDSalesPerson__c</columns>
        <columns>User__c</columns>
        <columns>User_Role__c</columns>
        <columns>User_Status__c</columns>
        <columns>Source_System__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>WS20310</value>
        </filters>
        <label>Test123</label>
    </listViews>
    <nameField>
        <label>Sales Person ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Person IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>